--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@ body {
 }
 
 .container {
+   
     background-color: rgb(202, 213, 180);
-    height: 550px;
-    width:400px;
+    height: 600px;
+    width:385px;
 }
 .display {
     background-color: white;
@@ -18,6 +19,12 @@ body {
 }
 
 button {
-    width: 100px;
-    height: 100px;
+    width: 90px;
+    height: 90px;
+    margin: 3px;
+    font-size: 30px;
+}
+
+.btn-0 {
+    width: 185px;
 }
