--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@ body {
 .display {
     background-color: white;
     height: 100px;
-    margin  : 10px;
+    margin: 10px;
+    text-align: right;
+    font-size: 60px;
 }
 
 button {
