--- a/style.css
+++ b/style.css
@@ -4,20 +4,26 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
+    background-color: #FDFBEE;
 }
 
 .container {
     padding: 20px ;
-    background-color: rgb(202, 213, 180);
+    background-color: #57B4BA;
     height: 600px;
     width:385px;
+    border-radius: 15px;
 }
 .display {
-    background-color: white;
+    background-color: #015551;
     height: 100px;
     margin: 10px;
     text-align: right;
-    font-size: 60px;
+    font-size: 30px;
+    color: #FDFBEE;
+    font-family: 'Press Start 2P', sans-serif;
+    border-radius: 5px;
+ 
 }
 
 button {
@@ -25,6 +31,11 @@ button {
     height: 90px;
     margin: 3px;
     font-size: 30px;
+    color: #015551;
+    font-family: 'Digital-7', sans-serif;
+    font-weight: bold;
+    border-radius: 30px;
+
 }
 
 .btn-0 {
